<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal" />
        <!--        android:src="@drawable/logo"-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/LoginTextInputLayoutStyle"
            android:text="@string/logintext"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="20dp"
            android:hint="Email"
            android:textColorHint="@color/white"
            app:boxStrokeWidth="2dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:hint="Password"
            android:textColorHint="@color/white"
            app:boxStrokeWidth="2dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_login"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/login"
            app:cornerRadius="5dp" />

        <TextView
            android:id="@+id/text_view_forgot_your_password"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/forgotyourpassword"
            android:textColor="@color/colorAccent"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView

                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account yet?"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="18dp"
                android:text="Sign up"
                android:textColor="@color/colorAccent"
                android:textSize="20dp" />

        </LinearLayout>

        <TextView
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:text="OR"
            android:textColor="@color/white"
            android:textSize="26dp" />

        <com.google.android.material.button.MaterialButton
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="50dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/white"
            android:text="Sign in with Google"
            android:textColor="@color/colorNormalText"
            app:cornerRadius="5dp" />


    </LinearLayout>

</ScrollView>

